--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "angularfire2": "^5.2.1",
     "firebase": "^7.2.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
